--- a/.env-example
+++ b/.env-example
@@ -1,24 +1,23 @@
-
 # GCP related
-GOOGLE_APPLICATION_CREDENTIALS='service-account.json' # path to service-account
-GOOGLE_CLOUD_PROJECT = ''                             # gcp project id
-BIGQUERY_DATASET = 'fitbit'                           # bigquery dataset to use
-FIRESTORE_DATASET = 'tokens'                          # firestore dataset to use
+GOOGLE_CLOUD_PROJECT=                                                                   # gcp project id
+FIRESTORE_DATASET=                                                                      # Name of the dataset where device tokens should be stored
+BIGQUERY_DATASET=                                                                       # Name of the BQ dataset where device data should be stored
 
 # Fitbit related
-FITBIT_OAUTH_CLIENT_ID = ''                           # fitbit client id (from dev.fitbit.com)
-FITBIT_OAUTH_CLIENT_SECRET = ''                       # fitbit secret (from dev.fitbit.com)
-FITBIT_OAUTH_REDIRECT_URL = 'http://127.0.0.1/services/fitbit/authorized' # from dev.fitbit.com
-OAUTHLIB_INSECURE_TRANSPORT=true                      # for testing, enable this
+FITBIT_OAUTH_CLIENT_ID=                                                                 # fitbit client id (from dev.fitbit.com)
+FITBIT_OAUTH_CLIENT_SECRET=                                                             # fitbit secret (from dev.fitbit.com)
+FITBIT_OAUTH_REDIRECT_URL=https://your_ip.nip.io/services/fitbit/authorized             # from dev.fitbit.com
+FILE_GOOGLE_APPLICATION_CREDENTIALS=                                                    # for testing, base64 encoded GCP serviceaccount keyfile
+FIRST_SYNC=                                                                             # Historical data will be retrieved up until this date
 
-# Openid Connect related
-OPENID_AUTH_METADATA_URL                              # from your openid provider
-OPENID_AUTH_CLIENT_ID                                 # from your openid provider
-OPENID_AUTH_CLIENT_SECRET                             # from your openid provider
-OPENID_AUTH_ALLOW_LIST                                # path to json file containing an array of
-                                                      # user emails to allow
+# OpenID Connect related
+OPENID_AUTH_METADATA_URL=https://accounts.google.com/.well-known/openid-configuration   # From your OpenID provider
+OPENID_AUTH_CLIENT_ID=                                                                  # From your OpenID provider
+OPENID_AUTH_CLIENT_SECRET=                                                              # From your OpenID provider
 
-# deployment related
-# FRONTEND_ONLY = true                               # deploy only user facing routes
-# BACKEND_ONLY = true                                # deploy only data ingestion routes
-# DEBUG = true                                       # show lots of details in logs
+# Deployment related
+SECRET_KEY=                                                                             # Secret key for the application
+DEBUG=                                                                                  # Wether to display extra debugging information: true / false
+FRONTEND_ONLY=                                                                          # Deploy only data ingestion routes
+BACKEND_ONLY=                                                                           # Deploy only user facing routes
+API_KEY=                                                                                # Provides access to ingest endpoints for cloud scheduler/functions
