--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,30 @@
-*.py[cod]
-.idea
-.vscode
-*.iml
-*.bak
-venv
-tags
-dist
-build
-*.egg-info
 *-service-account.json
+*.bak
+*.egg-info
+*.iml
+*.py[cod]
+*.tfvars
+.coverage
 .env
-.env.*
 .env-*
+.env-docker
+.env-docker-kantoor
+.env-example
+.env.*
+.idea
+.terraform
+.terraform.lock.hcl
+.vscode
 __pycache__
 _autosummary
 _build
-.coverage
-junit_report.xml
-public
+build
+data/
+dist
 flask_session
+junit_report.xml
+letsencrypt/
+public
+tags
 terraform.tfvars
-.terraform
-.terraform.lock.hcl
+venv
